dev/non_executable_reasons_record_from_random_10k/1530.txt
3.5
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
x = 50

def func(x):
    print 'x is', x
    x = 2
    print 'Changed local x to', x

func(x)
print 'x is still', x
------------------

[0;36m  File [0;32m"<ipython-input-1-466e1b889de1>"[0;36m, line [0;32m6[0m
[0;31m    print 'x is', x[0m
[0m               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'

SyntaxError: Missing parentheses in call to 'print' (<ipython-input-1-466e1b889de1>, line 6)

Executability                            : False
